// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cell arrow direction 1`] = `
<DocumentFragment>
  .c1.mul-icon {
  position: relative;
  display: inline-block;
  font-family: 'muld-icon' !important;
  font-size: inherit;
  text-rendering: auto;
  -webkit-font-smoothing: antialiased;
}

.c1.mul-icon::before {
  display: inline-block;
}

.c1.mul-icon .mul-icon__image {
  width: 1em;
  height: 1em;
  object-fit: contain;
}

.c1.mul-icon-arrow-down::before {
  content: '\\F007';
}

.c0.mul-cell {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  width: 100%;
  padding: 0.625rem 1rem;
  overflow: hidden;
  color: #323233;
  font-size: 0.875rem;
  line-height: 1.5rem;
  background-color: #fff;
}

.c0.mul-cell:last-child::after,
.c0.mul-cell--borderless::after {
  display: none;
}

.c0.mul-cell::after {
  position: absolute;
  box-sizing: border-box;
  content: ' ';
  pointer-events: none;
  right: 1rem;
  bottom: 0;
  left: 1rem;
  border-bottom: 1px solid #ebedf0;
  -webkit-transform: scaleY(0.5);
  -ms-transform: scaleY(0.5);
  transform: scaleY(0.5);
}

.c0.mul-cell .mul-cell__label {
  margin-top: 0.25rem;
  color: #969799;
  font-size: 0.75rem;
  line-height: 1.125rem;
}

.c0.mul-cell .mul-cell__title,
.c0.mul-cell .mul-cell__value {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c0.mul-cell .mul-cell__value {
  position: relative;
  overflow: hidden;
  color: #969799;
  text-align: right;
  vertical-align: middle;
  word-wrap: break-word;
}

.c0.mul-cell .mul-cell__value--alone {
  color: #323233;
  text-align: left;
}

.c0.mul-cell .mul-cell__left-icon,
.c0.mul-cell .mul-cell__right-icon {
  min-width: 1em;
  height: 1.5rem;
  font-size: 1rem;
  line-height: 1.5rem;
}

.c0.mul-cell .mul-cell__left-icon {
  margin-right: 0.25rem;
}

.c0.mul-cell .mul-cell__right-icon {
  margin-left: 0.25rem;
  color: #969799;
}

.c0.mul-cell--clickable {
  cursor: pointer;
}

.c0.mul-cell--clickable:active {
  background-color: #f2f3f5;
}

.c0.mul-cell--required {
  overflow: visible;
}

.c0.mul-cell--required::before {
  position: absolute;
  left: 0.5rem;
  color: #fa220a;
  font-size: 0.875rem;
  content: '*';
}

.c0.mul-cell--center {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0.mul-cell--large {
  padding-top: 0.75rem;
  padding-bottom: 0.75rem;
}

.c0.mul-cell--large .mul-cell__title {
  font-size: 1rem;
}

.c0.mul-cell--large .mul-cell__label {
  font-size: 0.875rem;
}

<div
    class="c0 mul-cell mul-cell--clickable"
    role="button"
    tabindex="0"
  >
    <div
      class="mul-cell__value mul-cell__value--alone"
    >
      content
    </div>
    <i
      class="c1 mul-icon mul-icon-arrow-down mul-cell__right-icon"
      content="F007"
      name="arrow-down"
      style="font-size: 1.25rem;"
    />
  </div>
</DocumentFragment>
`;

exports[`Cell icon-prefix prop 1`] = `
<DocumentFragment>
  .c1.mul-icon {
  position: relative;
  display: inline-block;
  font-family: 'muld-icon' !important;
  font-size: inherit;
  text-rendering: auto;
  -webkit-font-smoothing: antialiased;
}

.c1.mul-icon::before {
  display: inline-block;
}

.c1.mul-icon .mul-icon__image {
  width: 1em;
  height: 1em;
  object-fit: contain;
}

.c1.mul-icon-success::before {
  content: '\\F0C8';
}

.c0.mul-cell {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  width: 100%;
  padding: 0.625rem 1rem;
  overflow: hidden;
  color: #323233;
  font-size: 0.875rem;
  line-height: 1.5rem;
  background-color: #fff;
}

.c0.mul-cell:last-child::after,
.c0.mul-cell--borderless::after {
  display: none;
}

.c0.mul-cell::after {
  position: absolute;
  box-sizing: border-box;
  content: ' ';
  pointer-events: none;
  right: 1rem;
  bottom: 0;
  left: 1rem;
  border-bottom: 1px solid #ebedf0;
  -webkit-transform: scaleY(0.5);
  -ms-transform: scaleY(0.5);
  transform: scaleY(0.5);
}

.c0.mul-cell .mul-cell__label {
  margin-top: 0.25rem;
  color: #969799;
  font-size: 0.75rem;
  line-height: 1.125rem;
}

.c0.mul-cell .mul-cell__title,
.c0.mul-cell .mul-cell__value {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c0.mul-cell .mul-cell__value {
  position: relative;
  overflow: hidden;
  color: #969799;
  text-align: right;
  vertical-align: middle;
  word-wrap: break-word;
}

.c0.mul-cell .mul-cell__value--alone {
  color: #323233;
  text-align: left;
}

.c0.mul-cell .mul-cell__left-icon,
.c0.mul-cell .mul-cell__right-icon {
  min-width: 1em;
  height: 1.5rem;
  font-size: 1rem;
  line-height: 1.5rem;
}

.c0.mul-cell .mul-cell__left-icon {
  margin-right: 0.25rem;
}

.c0.mul-cell .mul-cell__right-icon {
  margin-left: 0.25rem;
  color: #969799;
}

.c0.mul-cell--clickable {
  cursor: pointer;
}

.c0.mul-cell--clickable:active {
  background-color: #f2f3f5;
}

.c0.mul-cell--required {
  overflow: visible;
}

.c0.mul-cell--required::before {
  position: absolute;
  left: 0.5rem;
  color: #fa220a;
  font-size: 0.875rem;
  content: '*';
}

.c0.mul-cell--center {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0.mul-cell--large {
  padding-top: 0.75rem;
  padding-bottom: 0.75rem;
}

.c0.mul-cell--large .mul-cell__title {
  font-size: 1rem;
}

.c0.mul-cell--large .mul-cell__label {
  font-size: 0.875rem;
}

<div
    class="c0 mul-cell"
  >
    <i
      class="c1 my-icon my-icon-success mul-cell__left-icon"
      content="F0C8"
      name="success"
      style="font-size: 1.25rem;"
    />
    <div
      class="mul-cell__value mul-cell__value--alone"
    >
      content
    </div>
  </div>
</DocumentFragment>
`;

exports[`Cell render slot 1`] = `
<DocumentFragment>
  .c1.mul-icon {
  position: relative;
  display: inline-block;
  font-family: 'muld-icon' !important;
  font-size: inherit;
  text-rendering: auto;
  -webkit-font-smoothing: antialiased;
}

.c1.mul-icon::before {
  display: inline-block;
}

.c1.mul-icon .mul-icon__image {
  width: 1em;
  height: 1em;
  object-fit: contain;
}

.c1.mul-icon-::before {
  content: '\\ ';
}

.c0.mul-cell {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  width: 100%;
  padding: 0.625rem 1rem;
  overflow: hidden;
  color: #323233;
  font-size: 0.875rem;
  line-height: 1.5rem;
  background-color: #fff;
}

.c0.mul-cell:last-child::after,
.c0.mul-cell--borderless::after {
  display: none;
}

.c0.mul-cell::after {
  position: absolute;
  box-sizing: border-box;
  content: ' ';
  pointer-events: none;
  right: 1rem;
  bottom: 0;
  left: 1rem;
  border-bottom: 1px solid #ebedf0;
  -webkit-transform: scaleY(0.5);
  -ms-transform: scaleY(0.5);
  transform: scaleY(0.5);
}

.c0.mul-cell .mul-cell__label {
  margin-top: 0.25rem;
  color: #969799;
  font-size: 0.75rem;
  line-height: 1.125rem;
}

.c0.mul-cell .mul-cell__title,
.c0.mul-cell .mul-cell__value {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c0.mul-cell .mul-cell__value {
  position: relative;
  overflow: hidden;
  color: #969799;
  text-align: right;
  vertical-align: middle;
  word-wrap: break-word;
}

.c0.mul-cell .mul-cell__value--alone {
  color: #323233;
  text-align: left;
}

.c0.mul-cell .mul-cell__left-icon,
.c0.mul-cell .mul-cell__right-icon {
  min-width: 1em;
  height: 1.5rem;
  font-size: 1rem;
  line-height: 1.5rem;
}

.c0.mul-cell .mul-cell__left-icon {
  margin-right: 0.25rem;
}

.c0.mul-cell .mul-cell__right-icon {
  margin-left: 0.25rem;
  color: #969799;
}

.c0.mul-cell--clickable {
  cursor: pointer;
}

.c0.mul-cell--clickable:active {
  background-color: #f2f3f5;
}

.c0.mul-cell--required {
  overflow: visible;
}

.c0.mul-cell--required::before {
  position: absolute;
  left: 0.5rem;
  color: #fa220a;
  font-size: 0.875rem;
  content: '*';
}

.c0.mul-cell--center {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0.mul-cell--large {
  padding-top: 0.75rem;
  padding-bottom: 0.75rem;
}

.c0.mul-cell--large .mul-cell__title {
  font-size: 1rem;
}

.c0.mul-cell--large .mul-cell__label {
  font-size: 0.875rem;
}

<div
    class="c0 mul-cell"
  >
    <i
      class="c1 mul-icon mul-icon-custom icon mul-cell__left-icon"
      name="custom icon"
      style="font-size: 1.25rem;"
    />
    <div
      class="mul-cell__title"
    >
      <span>
        custom title
      </span>
      <div
        class="mul-cell__label"
      >
        custom label
      </div>
    </div>
    <div
      class="mul-cell__value"
    >
      content
    </div>
  </div>
</DocumentFragment>
`;

exports[`Cell title-style prop 1`] = `
<DocumentFragment>
  .c0.mul-cell {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  width: 100%;
  padding: 0.625rem 1rem;
  overflow: hidden;
  color: #323233;
  font-size: 0.875rem;
  line-height: 1.5rem;
  background-color: #fff;
}

.c0.mul-cell:last-child::after,
.c0.mul-cell--borderless::after {
  display: none;
}

.c0.mul-cell::after {
  position: absolute;
  box-sizing: border-box;
  content: ' ';
  pointer-events: none;
  right: 1rem;
  bottom: 0;
  left: 1rem;
  border-bottom: 1px solid #ebedf0;
  -webkit-transform: scaleY(0.5);
  -ms-transform: scaleY(0.5);
  transform: scaleY(0.5);
}

.c0.mul-cell .mul-cell__label {
  margin-top: 0.25rem;
  color: #969799;
  font-size: 0.75rem;
  line-height: 1.125rem;
}

.c0.mul-cell .mul-cell__title,
.c0.mul-cell .mul-cell__value {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c0.mul-cell .mul-cell__value {
  position: relative;
  overflow: hidden;
  color: #969799;
  text-align: right;
  vertical-align: middle;
  word-wrap: break-word;
}

.c0.mul-cell .mul-cell__value--alone {
  color: #323233;
  text-align: left;
}

.c0.mul-cell .mul-cell__left-icon,
.c0.mul-cell .mul-cell__right-icon {
  min-width: 1em;
  height: 1.5rem;
  font-size: 1rem;
  line-height: 1.5rem;
}

.c0.mul-cell .mul-cell__left-icon {
  margin-right: 0.25rem;
}

.c0.mul-cell .mul-cell__right-icon {
  margin-left: 0.25rem;
  color: #969799;
}

.c0.mul-cell--clickable {
  cursor: pointer;
}

.c0.mul-cell--clickable:active {
  background-color: #f2f3f5;
}

.c0.mul-cell--required {
  overflow: visible;
}

.c0.mul-cell--required::before {
  position: absolute;
  left: 0.5rem;
  color: #fa220a;
  font-size: 0.875rem;
  content: '*';
}

.c0.mul-cell--center {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0.mul-cell--large {
  padding-top: 0.75rem;
  padding-bottom: 0.75rem;
}

.c0.mul-cell--large .mul-cell__title {
  font-size: 1rem;
}

.c0.mul-cell--large .mul-cell__label {
  font-size: 0.875rem;
}

<div
    class="c0 mul-cell"
  >
    <div
      class="mul-cell__title"
      style="color: red;"
    >
      <span>
        custom title
      </span>
    </div>
    <div
      class="mul-cell__value"
    >
      content
    </div>
  </div>
</DocumentFragment>
`;
